trying a new theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
-<div class="disclaimer">
-  <p>
-    © <a href="http://twitter.com/somethinglabs">something Labs</a>, 2014
-  </p>
-</div>
+<!-- footer.html -->
+<footer>
+ <hr/>
+ <p>
+ 	&copy; {{ site.time | date: '%Y' }} something Blogs by <a href="http://www.twitter.com/somethinglabs">@somethingLabs</a>
+ </p>
+</footer>
+
+<!-- footer.html end -->
