--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,11 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
-	<a href="{{ site.BASE_PATH }}/">
-		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
+	<a href="{{ site.ROOT_PATH }}/">
+		<img src="/assets/ico/somethinglabs.png?s=150" class="img-circle" style="width: 150px"/>
 	</a>
 	<h3 class="title">
-        <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
-    </h3>
+		<a href="{{ site.ROOT_PATH }}/">{{ site.title }}</a>
+  </h3>
 </header>
 
 {% if site.author.bio %}
@@ -54,13 +54,11 @@
 		</li>
 		{% endif %}
 		<li>
-			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
+			<a class="btn btn-default btn-sm" href="{{ site.ROOT_PATH }}/{{ site.rss_path }}">
 				<i class="fa fa-rss fa-lg"></i>
 			</a>
 		</li>
 	</ul>
 </div>
-
-	
 
 <! -- sidebar.html end -->
