--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,9 +1,9 @@
 <article>
-	<div class="page-header">
-	  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+	<div class="page-header" style="margin-top: 0px">
+	  <h1 style="margin: 0px">{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 	</div>
 
-	<div class="col-sm-10">
+	<div>
 	 <span class="post-date">
 	   {% assign d = page.date | date: "%d" | plus:'0' %}
 	   {{ page.date | date: "%B" }}
