--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
-	<a href="{{ site.ROOT_PATH }}/">
+	<a href="http://www.somethinglabs.com/">
 		<img src="/assets/ico/somethinglabs.png?s=150" class="img-circle" style="width: 150px"/>
 	</a>
 	<h3 class="title">
